<resources>
    <string name="hx_app_name">huxin_sdk</string>
    <string name="hx_action_settings">Settings</string>
    <string name="hx_guide">guide fragment</string>
    <string name="hx_index">index fragment</string>
    <string name="hx_login">登录</string>
    <string name="hx_edit_card">创建名片</string>
    <string name="hx_receive_card">收名片</string>
    <string name="hx_update_card">更新名片</string>
    <string name="hx_get_card">获取名片</string>
    <string name="hx_chat">发送消息</string>
    <string name="hx_float_view">浮屏UI</string>
    <string name="hx_my_location">我的位置</string>
    <string name="hx_gif">GIF动画</string>
    <string name="hx_shake">摇一摇</string>
    <string name="hx_feedbace">意见反馈</string>
    <string name="hx_set_show">设置秀</string>
    <string name="hx_user_show">通话秀</string>
    <string name="hx_set_represent">代言</string>
    <string name="hx_set_merchant">商家秀</string>
    <string name="hx_log">查看日志</string>
    <string name="hx_sms">发送短信</string>
    <string name="hx_send_file">发送文件</string>
    <string name="hx_access">辅助功能</string>
    <string name="hx_move">移动</string>
    <string name="hx_confirm">确认</string>
    <string name="hx_cancel">取消</string>
    <string name="hx_phone_number">手机号</string>
    <string name="hx_back">返回</string>
    <string name="hx_send_test_msg">发送测试消息</string>
    <string name="hx_phone_illegitmacy">手机号码非法</string>
    <string name="hx_login_title">手机验证</string>
    <string name="hx_login_req_valid">获取验证码</string>
    <string name="hx_login_phone_hint">输入手机号码</string>
    <string name="hx_login_valid_hint">输入验证码</string>
    <string name="hx_login_valid">验证码</string>
    <string name="hx_login_loading">登录中</string>
    <string name="hx_login_valid_second">%1ds</string>
    <string name="hx_not_login">未登录</string>
    <string name="hx_login_out">退出登录</string>
    <string name="hx_login_out_msg">您确定退出登录吗?</string>
    <string name="hx_login_out_sucess">确定退出登录成功</string>
    <string name="hx_prompt">短信发送提示</string>
    <string name="hx_not_user_info">对方不是呼信用户，将使用短信发送内容。</string>
    <string name="hx_send_text_suffix">【呼信】</string>
    <string name="hx_send_text">我用【呼信】给你发了文字：</string>
    <string name="hx_send_picture">我用【呼信】给你发了一张图片，点击链接查看:</string>
    <string name="hx_send_location">我用【呼信】给你发了我的位置，点击链接查看:</string>
    <string name="hx_send_audio">我用【呼信】给你发了一段语音，点击链接查看:</string>
    <string name="hx_send_big_file">我用【呼信】给你发了一个文件，点击链接查看:</string>
    <string name="hx_send_contacts_card">我用【呼信】给你发了名片：</string>
    <string name="hx_send_video">我用【呼信】给你发了一个视频，点击链接查看:</string>
    <string name="hx_send_text_jokes">我用【呼信】给你发了一个段子：</string>
    <string name="hx_hint_phone">发送目标手机号</string>
    <string name="hx_hint_msg">消息内容</string>
    <string name="hx_cur_show_title">当前通话秀</string>
    <string name="hx_setting_show">设置通话秀</string>
    <string name="hx_show_title">选择素材</string>
    <string name="hx_camera_title">自定义</string>
    <string name="hx_call_name">Emma</string>
    <string name="hx_call_text">我知道了</string>
    <string name="hx_call_info">186XXXX8888 | 广东 深圳</string>
    <string name="hx_apply_show_fail">通话秀设置失败</string>
    <string name="hx_my_discount_conpou">我的卡券</string>
    <string name="hx_my_disable">已失效</string>
    <string name="hx_clean_out">清空</string>
    <string name="hx_conpou_detail">券详情</string>
    <string name="hx_conpou_exc_result">兑换结果</string>
    <string name="hx_conpou_exc_success">兑换成功</string>
    <string name="hx_conpou_exc_fail">兑换失败</string>
    <string name="hx_conpou_exc_get_data_fail">网络异常，请检查网络！</string>
    <string name="hx_filepreview_back">返回</string>
    <string name="hx_filepreview_zero">0k</string>
    <string name="hx_filepreview_slant">/</string>
    <string name="hx_filepreview_right">)</string>
    <string name="hx_conpou_details_holiday"> ( 周末、法定节假日不通用 )</string>
    <string name="hx_conpou_details_overtime">已过期</string>
    <string name="hx_conpou_details_used">已使用</string>
    <string name="hx_conpou_details_exchanging">立即兑换</string>
    <string name="hx_conpou_details_exchanged">已兑换</string>
    <string name="hx_conpou_detail_cancle">取消</string>
    <string name="hx_conpou_detail_validity">有效期：</string>
    <string name="from">来自:</string>
    <string name="hx_imadapter_data">是否删除这条消息?</string>
    <string name="hx_imadapter_sure">确定</string>
    <string name="hx_imadapter_cancle">取消</string>
    <string name="hx_imadapter_close">关闭</string>
    <string name="hx_imadapter_call">拨号</string>
    <string name="hx_imadapter_talk">按住说话</string>
    <string name="hx_imadapter_choose_send_file">选择发送的文件</string>
    <string name="hx_imadapter_send_pic_success">Send successfully</string>
    <string name="hx_imadapter_send_location_success">发送位置成功</string>
    <string name="hx_imadapter_send_file_success">Send successfully</string>
    <string name="hx_imadapter_send_message_success">Send successfully</string>
    <string name="hx_imadapter_send_voice_success">Send successfully</string>
    <string name="hx_imadapter_file">文件不能大于50MB!!!</string>
    <string name="hx_imadapter_wifi_break">网络已断开，请检查！</string>
    <string name="hx_imadapter_not_wifi">非wifi情况下会产生更多的流量,请确认是否继续?</string>
    <string name="hx_imadapter_remind">提示</string>
    <string name="hx_imadapter_continue">继续</string>
    <string name="hx_imadapter_file_noexist">File does not exist!</string>
    <string name="hx_imadapter_fm_uninstall">Please install File Manager</string>
    <string name="hx_video_record_too_short">The video is too short.Once again.</string>
    <string name="hx_chat_fragment_choose_pic">选择图片</string>
    <string name="hx_chat_fragment_receive">收:</string>
    <string name="hx_chat_fragment_send">发:</string>
    <string name="hx_chat_fragment_lable">广东省深圳市南山区高新南四道中国科技开发院孵化基地</string>
    <string name="hx_get_card_fragment_nickname">昵称：</string>
    <string name="hx_get_card_fragment_sex">性别：</string>
    <string name="hx_get_card_fragment_area">地区：</string>
    <string name="hx_get_card_fragment_sign">签名：</string>
    <string name="hx_get_card_fragment_email">邮箱：</string>
    <string name="hx_get_card_fragment_position">职位：</string>
    <string name="hx_get_card_fragment_special_plane">座机：</string>
    <string name="hx_get_card_fragment_special_plane_error">座机格式不正确</string>
    <string name="hx_get_card_fragment_adress">地址：</string>
    <string name="hx_get_card_fragment_url">网址：</string>
    <string name="hx_get_card_fragment_company_name">公司名称：</string>
    <string name="hx_get_card_fragment_feedback_content">反馈内容</string>
    <string name="hx_get_card_fragment_email_error">邮箱格式不正确</string>
    <string name="hx_get_card_fragment_update_pic_success">名片照更新成功</string>
    <string name="hx_callfullview_send_emoji_success">Send successfully</string>
    <string name="hx_hook_strategy_msg_text">【文字】</string>
    <string name="hx_hook_strategy_msg_emoji">【表情】</string>
    <string name="hx_hook_strategy_msg_pic">【图片】</string>
    <string name="hx_hook_strategy_msg_map">【地图】</string>
    <string name="hx_hook_strategy_msg_voice">【语音】</string>
    <string name="hx_hook_strategy_msg_tv">【视频】</string>
    <string name="hx_hook_strategy_msg_file">【文件】</string>
    <string name="hx_hook_strategy_msg_bizcard">【名片】</string>
    <string name="hx_hook_strategy_share_location">【位置共享】</string>
    <string name="hx_hook_strategy_msg">您有1条未读消息</string>
    <string name="hx_hook_strategy_hour">小时</string>
    <string name="hx_hook_strategy_minute">分</string>
    <string name="hx_hook_strategy_second">秒</string>
    <string name="hx_hook_strategy_log_pic_success">发送图片成功</string>
    <string name="hx_hook_strategy_log_location_success">发送位置成功</string>
    <string name="hx_hook_strategy_log_voice_success">发送语音成功</string>
    <string name="hx_hook_strategy_log_message_success">发送消息成功</string>
    <string name="hx_hook_strategy_log_infomation">商务住宅|道路附属设施|地名地址信息|公共设施|生活服务|餐饮服务|购物服务</string>
    <string name="hx_picture_fragment_all">所有图片</string>
    <string name="hx_picture_fragment_unit">%1$d张</string>
    <string name="hx_picture_fragment_sure">确定</string>
    <string name="send_sms_content">发送短信功能需要您开启短信权限</string>
    <string name="phone_permission_content">发送短信功能需要您开启短信权限</string>
    <string name="sdcard_permission_content">呼信需要您开启sdcard访问权限</string>
    <string name="permission_title">权限提示</string>
    <string name="permission_content">您需要开启权限</string>
    <string name="confirm">设置</string>
    <string name="cancel">取消</string>
    <string name="hx_merchant_tip1">加入商家秀后，通话时向对方展示商家秀。</string>
    <string name="hx_merchant_tip2">  输入格式：075526606921</string>
    <string name="hx_merchant_tip3">输入商家号码</string>
    <string name="hx_merchant_tip4">加入商家秀</string>
    <string name="hx_merchant_exit">退出商家秀</string>
    <string name="hx_merchant_show">商家秀</string>
    <string name="hx_merchant_sdk_show">SDK商家秀</string>
    <string name="hx_personal_show">通话秀</string>
    <string name="tv_tbmine_my_job">产品设计</string>
    <string name="hx_phone_time">0:00PM</string>
    <string name="hx_send_loc">发位置</string>
    <string name="hx_send_pic">发图片</string>
    <string name="hx_send_emo">发表情</string>
    <string name="hx_shark_joke">摇段子</string>
    <string name="hx_show_setup">立即应用</string>
    <string name="hx_show_used">应用中</string>
    <string name="hx_upload_image">正在上传中...</string>
    <string name="hx_upload_loading">加载中...</string>
    <string name="hx_upload_file">正在发送文件,退出将自动取消发送</string>
    <string name="hx_pull_to_refresh_header_text">下拉可以刷新&#8230;</string>
    <string name="hx_pull_to_refresh_header_hint_ready">松开即可刷新&#8230;</string>
    <string name="hx_pull_to_refresh_bottom_hint_normal">上拉可以刷新</string>
    <string name="hx_pull_to_refresh_bottom_hint_onclick">点击加载更多</string>
    <string name="hx_pull_to_refresh_bottom_no_more_msg">已经到底啦</string>
    <string name="hx_pull_to_refresh_update_time">最后更新时间:</string>
    <string name="hx_pull_to_refresh_load_more_text">努力加载中&#8230;</string>
    <string name="hx_dialog1_set_show_tips">通话秀出百变的你\n设置一张图片试试呗！</string>
    <string name="hx_dialog1_set_show">设置通话秀</string>
    <string name="hx_dialog2_set_show_tips">通话秀设置好啦，\n拨打电话看看效果吧！</string>
    <string name="hx_dialog2_call_myself">打给自己</string>
    <string name="hx_dialog2_skip">跳过</string>
    <string name="hx_tip_text">加入代言后，系统将取消您设置的通话秀，对方通话弹窗上将显示本条代言内容。</string>
    <string name="hx_tip_setting_show_text">设置通话秀后，系统将取消您的代言，您将会失去代言收益。</string>
    <string name="hx_tip_setting_show_text02">设置通话秀后，系统将取消您的商家秀。</string>
    <string name="hx_tip_setting_show_text03">上一个代言任务还未完成，加入新的代言原有代言将会被替换，代言临时收益也会自动清零！</string>
    <string name="hx_tip_coupon_text">兑换优惠券</string>
    <string name="hx_tip_represent_show_text">设置通话秀后，系统将会停止您的代言。</string>
    <string name="hx_tip_represent_show_merchant">设置通话秀后，系统将会停止您的商家秀。</string>
    <string name="hx_tip_merchant_show_rep">设置商家秀后，系统将会停止您的代言。</string>
    <string name="hx_tip_merchant_show_use">设置商家秀后，系统将会停止您的通话秀。</string>
    <string name="hx_tip_merchant_text">退出当前商家秀？</string>
    <string name="hx_tip_represent_text">代言</string>
    <string name="hx_crop__saving">正在保存照片…</string>
    <string name="hx_crop__wait">请等待…</string>
    <string name="hx_crop__pick_error">无效的图片</string>
    <string name="hx_crop__done">完成</string>
    <string name="hx_permission_cfg">权限设置</string>
    <string name="hx_im">即时聊天</string>
    <string name="im_card_no_remark">暂无备注</string>
    <string name="hx_personal_show_guide_skip">跳过</string>
    <string name="hx_im_text_copy">复制</string>
    <string name="hx_im_text_delete">删除</string>
    <string name="hx_im_text_forward">转发</string>
    <string name="hx_im_text_collect">收藏</string>
    <string name="hx_im_text_remind">提醒</string>
    <string name="hx_send_card_text">发送</string>
    <string name="hx_im_card_sheet_new_remark">新建备注</string>
    <string name="hx_im_card_sheet_tip">提醒</string>
    <string name="hx_im_remark_preview_dialog_tip3">当前沟通卡备注信息将发送给对方进行快捷备注</string>
    <string name="hx_im_card_sheet_send_remark">发送备注</string>
</resources>