<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rel_content"
    android:layout_width="@dimen/hx_login_width"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/hx_login_bg">
    <!--onClose btn-->
    <ImageButton
        android:id="@+id/close_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:layout_margin="@dimen/hx_login_close"
        android:background="@android:color/transparent"
        android:src="@drawable/hx_login_close"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <!--title-->
        <TextView
            android:id="@+id/title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/hx_login_title"
            android:text="@string/hx_prompt"
            android:textColor="@color/hx_color_black1"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="24dp"
                android:text="@string/hx_not_user_info"
                android:textColor="@color/hx_color_black1"
                android:textSize="16sp" />
        </RelativeLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="#e0e0e0" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:orientation="horizontal">


            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:text="@string/hx_cancel"
                android:textColor="#3e3e3e"
                android:textSize="15sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="#e0e0e0" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:background="@null"
                android:gravity="center"
                android:text="@string/hx_confirm"
                android:textColor="#3e3e3e"
                android:textSize="15sp" />

        </LinearLayout>

    </LinearLayout>
</RelativeLayout>

