<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="4dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/hx_select_tip"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="6dp"
        android:paddingLeft="6dp"
        android:paddingRight="6dp"
        android:paddingTop="6dp">

        <LinearLayout
            android:id="@+id/text_select_cope_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_select_cope"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/hx_im_text_copy"
                android:textColor="#EEEEEE"
                android:visibility="visible" />

            <View
                android:layout_width="1dp"
                android:layout_height="12dp"
                android:background="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_select_forward_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_select_forward"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/hx_im_text_forward"
                android:textColor="#EEEEEE" />

            <View
                android:layout_width="1dp"
                android:layout_height="12dp"
                android:background="#FFFFFF" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/text_select_collect_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_select_collect"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/hx_im_text_collect"
                android:textColor="#EEEEEE" />

            <View
                android:id="@+id/text_select_delete_line"
                android:layout_width="1dp"
                android:layout_height="12dp"
                android:background="#FFFFFF" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/text_select_remind_lay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_select_remind"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/hx_im_text_remind"
                android:textColor="#EEEEEE" />

            <View
                android:id="@+id/text_select_remind_line"
                android:layout_width="1dp"
                android:layout_height="12dp"
                android:background="#FFFFFF" />
        </LinearLayout>

        <TextView
            android:id="@+id/text_select_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="8dp"
            android:paddingRight="8dp"
            android:text="@string/hx_im_text_delete"
            android:textColor="#EEEEEE" />

    </LinearLayout>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/hx_select_triangle_icon" />

</LinearLayout>