<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/hxs_color_trans_six"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_margin="25dp">

            <Button
                android:id="@+id/tv_dialog_show_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@null"
                android:text="@string/hx_personal_show_guide_skip"
                android:textColor="@color/hx_color_white"
                android:textSize="15.3sp"
                android:visibility="visible" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/fl_dialog_show"
            android:layout_centerHorizontal="true"
            android:layout_gravity="bottom|center_horizontal"
            android:background="@drawable/hx_dialog_show_tip_one_bg"
            android:gravity="bottom"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="30dp"
                android:gravity="center"
                android:text="@string/hx_dialog1_set_show_tips"
                android:textColor="@color/hx_color_white"
                android:textSize="17sp" />

        </LinearLayout>

        <FrameLayout
            android:id="@+id/fl_dialog_show"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true">

            <TextView
                android:id="@+id/tv_dialog_show_jump"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="27dp"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="40dp"
                android:layout_marginTop="18dp"
                android:background="@drawable/hx_tip_dialog_green_selector"
                android:gravity="center"
                android:padding="12dp"
                android:text="@string/hx_dialog1_set_show"
                android:textColor="@color/hx_color_white"
                android:textSize="16sp" />
        </FrameLayout>

    </RelativeLayout>

</LinearLayout>