<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/hx_login_width"
    android:layout_height="wrap_content"
    android:background="@drawable/hx_login_bg"
    android:orientation="vertical">

    <!--title-->
    <TextView
        android:id="@+id/dialog_remark_send_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/hx_login_title"
        android:lineSpacingExtra="@dimen/card_font_size_small_spacing"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:text="@string/hx_im_remark_preview_dialog_tip3"
        android:textColor="@color/hx_color_black1"
        android:textSize="16sp" />

    <RelativeLayout
        android:id="@+id/dialog_remark_send_info_lay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginLeft="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/hx_remark_content_bg"
        android:paddingTop="15dp">

        <LinearLayout
            android:id="@+id/dialog_remark_send_title_lay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <View
                android:layout_width="2dp"
                android:layout_height="18dp"
                android:layout_marginLeft="1dp"
                android:background="@color/hx_assist_color" />

            <TextView
                android:id="@+id/dialog_remark_send_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:textColor="@color/hx_color_black1"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/dialog_remark_send_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="12dp"
                android:src="@drawable/hx_im_card_remark_preview_icon" />

        </LinearLayout>

        <TextView
            android:id="@+id/dialog_remark_send_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/dialog_remark_send_title_lay"
            android:ellipsize="end"
            android:hint="@string/im_card_no_remark"
            android:maxLines="3"
            android:paddingBottom="12dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="12dp"
            android:textColor="@color/hx_color_black1"
            android:textSize="14sp" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#e0e0e0" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal">


        <Button
            android:id="@+id/dialog_remark_send_cancel_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/hx_cancel"
            android:textColor="#3e3e3e"
            android:textSize="15sp" />

        <View
            android:layout_width="1px"
            android:layout_height="match_parent"
            android:background="#e0e0e0" />

        <Button
            android:id="@+id/dialog_remark_send_submit_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginRight="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="center"
            android:text="@string/hx_send_card_text"
            android:textColor="@color/hxs_color_green3"
            android:textSize="15sp" />

    </LinearLayout>

</LinearLayout>

