<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="140dp"
    android:layout_marginTop="12dp"
    android:gravity="center"
    android:paddingBottom="32dp"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:paddingTop="12dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/item_card_bottom_sheet_remark_lay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="21dp"
            android:paddingRight="21dp">

            <ImageView
                android:id="@+id/item_card_bottom_sheet_remark_img"
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/hx_im_card_menu_remark_selector" />

            <TextView
                android:id="@+id/item_card_bottom_sheet_remark_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hx_im_card_sheet_new_remark" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_card_bottom_sheet_send_remark_lay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingLeft="21dp"
            android:paddingRight="21dp">

            <ImageView
                android:layout_width="56dp"
                android:layout_height="56dp"
                android:src="@drawable/hx_im_card_menu_send_remark_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hx_im_card_sheet_send_remark" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/item_card_bottom_sheet_tip_lay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/hx_im_card_menu_tip_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/hx_im_card_sheet_tip" />

        </LinearLayout>
    </LinearLayout>

</LinearLayout>
